manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-generator-service
spec:
  selector:
    app: book-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
