manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: books.mk.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: book-generator-service
            port:
              number: 80
